@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Fix removeFiles when there is a directory argument and a pattern
     Delete shakeDeterministic, shakeThreads=1 has the same effect
 0.10.4
     Fix writeFileChanged for line endings on Windows
